--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,48 +215,48 @@ input[type=submit] {
 }
 
 /*<!--p:hover,-->*/
- h1:hover, a:hover {
+/* h1:hover, a:hover {
     background-color: Gray;
 }
-
-p::after { 
+*/
+/*p::after { 
     content: " - Remember this";
-}
+}*/
 
 /* unvisited link */
-a:link {
+/*a:link {
     color: #FF0000;
-}
+}*/
 
 /* visited link */
-a:visited {
+/*a:visited {
     color: #00FF00;
-}
+}*/
 
 /* mouse over link */
-a:hover {
+/*a:hover {
     color: #FF00FF;
-}
+}*/
 
 /* selected link */
-a:active {
+/*a:active {
     color: #0000FF;
-}
+}*/
 
 
-h1::before {
+/*h1::before {
     content: url(smiley.gif);
-}
+}*/
 
-p::first-letter {
+/*p::first-letter {
     color: #ff0000;
     font-size: xx-large;
-}
+}*/
 
-p::first-line {
+/*p::first-line {
     color: #0000ff;
     font-variant: small-caps;
-}
+}*/
 /*
 selector:pseudo-class {
     property:value;
@@ -299,10 +299,12 @@ selector::pseudo-element {
 /*
 Assignment One Instructions - (No Bootstrap)
 
-1. Inside your Responsive-Portfolio folder, find your style.css file, it may be in assets/css. At the bottom of styles.css you will write your media queries.
+1. Inside your Responsive-Portfolio folder, find your style.css file, it may be in assets/css. 
+At the bottom of styles.css you will write your media queries.
 
 Use three @media screen tags, each with one of these max-widths: 980px, 768px and 640px.
-You use 980px because you never want any of the content to be cut off. Since the desktop layout is about 960px wide, you want the media queries to kick in before your content gets cut off.
+You use 980px because you never want any of the content to be cut off. 
+Since the desktop layout is about 960px wide, you want the media queries to kick in before your content gets cut off.
 768px is about the width of a tablet and 640px is about the width of a phone in landscape
 2. Make the layout match the following screenshots:
 
@@ -311,7 +313,8 @@ portfolio.html: 980px, 768px, 640px
 contact.html: 980px, 768px, 640px
 
 
-3. Make the position of the header static (the default positioning) when the screen is 640px wide. The header design takes up a lot of room; you don't want it to stick to the top of a small screen and leave no room for the rest of your site.
+3. Make the position of the header static (the default positioning) when the screen is 640px wide. 
+The header design takes up a lot of room; you don't want it to stick to the top of a small screen and leave no room for the rest of your site.
 
 4. Be sure to include the viewport tag in all your html files, otherwise your media-queries won't function like you'd expect on mobile devices.
 
