--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,23 @@ selector::pseudo-element {
         background-color: lightyellow;
         
     }
+        .sidebar {
+    background: #fff;
+    padding: 30px;
+    width: 100%;
+    /*max-width: 270px;
+    float: right;*/
+    max-width: 650px;
+    float: left;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    margin-right: 20px;
+	}
+    /*
+    width: 100%;
+    max-width: 650px;
+    float: left;
+    */
 }
 
 @media only screen and (max-width: 640px) {
@@ -297,6 +314,47 @@ selector::pseudo-element {
         background-color: lightgreen;
         
     }
+    .sidebar {
+    background: #fff;
+    padding: 30px;
+    width: 100%;
+    /*max-width: 270px;
+    float: right;*/
+    max-width: 650px;
+    float: left;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    margin-right: 20px;
+	}
+
+	#logo {
+	/*width: 250px;*/
+	height: 90px;
+	background: #4aaaa5;
+	width: 100%;
+    max-width: 650px;
+    float: left;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	text-align: center;
+	line-height: 90px;
+	color: #fff;
+	font-weight: 700;
+	font-size: 30px;
+	text-decoration: none;
+	}
+	nav {
+	float: left;
+	width: 100%;
+	margin-top: 25px;
+	margin-right: 20px;
+	}
+
+}
+    /*
+    width: 100%;
+    max-width: 650px;
+    float: left;
+    */
 }
 
 /*
